# osu2simai_ml

./: .gitignore  LICENSE  README.md  dune-project  osu2mai.opam
lib/: dune  gen_simai.ml  gen_simai.mli  parse.ml  parse.mli  types.ml
test/: dune
