(lang dune 3.18)

(name osu2mai)

(generate_opam_files true)

(source
 (github XajilX/osu2simai_ml))

(authors "XajilX <XajilX@outlook.com>")

(maintainers "")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name osu2mai)
 (synopsis "")
 (description "Just for fun")
 (depends ocaml)
 (tags
  ("parse" "osu" "simai")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
